AM_CFLAGS = -std=gnu99 -Wall -Wextra -Wno-packed-bitfield-compat -ggdb -Og
AM_LDFLAGS = -ggdb -Og

bin_PROGRAMS = lam lpart

lam_SOURCES = 3com.c lambda_cpu.c mem.c sdu.c smd.c tapemaster.c kernel.c nubus.c sdu_hw.c syms.c vcmem.c 3com.h ld.h nubus.h sdu_hw.h syms.h vcmem.h lambda_cpu.h mem.h sdu.h smd.h tapemaster.h

lpart_SOURCES = lpart.c
